--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ethers = "2.0"
+either = "1.6.1"
+serde = "1.0.164"
+serde_json = "1.0.96"
