--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 ethers = "2.0"
 either = "1.6.1"
-serde = "1.0.164"
+serde = "1.0.162"
 serde_json = "1.0.96"
+lazy_static = "1.4.0"
